-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.1.0
-
None
-
3
-
4861
Originally this issue was duplicate of LU-760 as mentioned in comments. Now it is about just memleaks. If echo client is failed to set up there are memleaks detected. They are caused by lack of error handling in some function including lu_kmem_init() itself.
- is duplicated by
-
LU-383 sanity: test_180b: NULL pointer dereference in obd echo driver
-
- Closed
-
- Trackbacks
-
Lustre 2.1.0 release testing tracker
Lustre 2.1.0 RC0 Tag: v2100RC0 Created Date: 20110820 The difference between RC0 and RC1 is only a date change in lustre/ChangeLog. Lustre 2.1....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....