LU-362 Fix error handling in lu_kmem_init()

- Free all caches if lu_kmem_init() failed
- fix error handling in echo_client_init(), cl_global_init() and
  ccc_global_init()

Signed-off-by: Mikhail Pershin <tappro@whamcloud.com>
Change-Id: Ide9e7ad6d40f99a7fbb4330ba63b168cc408356f